--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ Simulation/.idea/misc.xml
 Simulation/.idea/modules.xml
 Simulation/.idea/Simulation.iml
 Simulation/.idea/vcs.xml
+Simulation/.idea/copilot/chatSessions/blobs/version
+Simulation/.idea/copilot/chatSessions/00000000000.xd
+Simulation/.idea/copilot/chatSessions/xd.lck
+Simulation/.idea/workspace.xml
