--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ Simulation/.idea/copilot/chatSessions/blobs/version
 Simulation/.idea/copilot/chatSessions/00000000000.xd
 Simulation/.idea/copilot/chatSessions/xd.lck
 Simulation/.idea/workspace.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/ProjetSimulation.iml
+.idea/vcs.xml
+.idea/workspace.xml
